--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "bun run build",
+  "buildCommand": "NODE_OPTIONS=--max-old-space-size=7500 bun run build", 
   "installCommand": "bun install"
 }
