--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -7,7 +7,7 @@ permissions:
 
 on:
   schedule:
-    - cron: '0 8 * * 0' # every 6 hours
+    - cron: '0 8 * * 0' # Every Sunday 8am
   workflow_dispatch:
 
 jobs:
