--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -12,7 +12,7 @@ env:
 
 on:
   schedule:
-    - cron: '0 0 * * *' # every day
+    - cron: '0 8 * * 0' # Every Sunday 8am
   workflow_dispatch:
 
 jobs:
