--- a/.github/workflows/issue-close-require.yml
+++ b/.github/workflows/issue-close-require.yml
@@ -2,7 +2,7 @@ name: Issue Close Require
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 8 * * 0' # Every Sunday 8am
 
 permissions:
   contents: read
