--- a/.github/workflows/auto-i18n.yml
+++ b/.github/workflows/auto-i18n.yml
@@ -2,7 +2,7 @@ name: Daily i18n Update
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 8 * * 0' # Every Sunday 8am
   workflow_dispatch:
 
 # Add permissions configuration
